# CHANGES TO MTurkR 0.5 #

## SIGNIFICANT USER-VISIBLE CHANGES ##
* `GetBonuses` no longer supports the `return.bonus.dataframe` logical. All bonuses are automatically returned. To just retrieve details on number of bonuses per HIT, request only the first page with `page.number=1` and `print=TRUE`.
* The `credentials` function has now been changed to create and/or retrieve a global option `MTurkR.keypair`. This is a backwards compatible change that allows users to specify `options(MTurkR.keypair=c(accesskey, secretkey))` directly without using `credentials`. All functions now point directly to the global option, so that `credentials` can be deprecated in a future release.
* In many functions that return a dataframe with a `Valid` column (e.g., `ContactWorkers`, etc.), `Valid` is now a factor. (#28)
* Using `ContactWorkers` in batch mode now returns a dataframe identical in structure to using it in regular mode, with one row per worker. (#32)
* The `signature` argument to `request` now defaults to `NULL` and is generated automatically.
* `HITsToDataFrame` now returns, for the QualificationRequirements list element, an empty dataframe rather a single NA missing value if a given HIT does not have any QualificationRequirements attached to it.
* `request` now generates the API authentication signature automatically, eliminating the need for `authenticate`.
* `request` now uses `curlPerform` instead `getURL` to gain finer control over API requests.
* `request` now attempts to `tryCatch` any errors on writing the MTurkR log file. (#9)
* `request` now returns an object of S3 class "MTurkResponse" and an associated print method has been added.

## BUG FIXES ##