@@ -1,48 +1,180 @@
-#exportPattern("^[[:alpha:]]+")
-export("accountbalance
+# internal
+#export("request")
+#export("ParseErrorCodes")
+
+# deprecated
+#export("APIReference")
+#export("authenticate")
+#export("mturkhelp")
+export("credentials")
+
+# exported
+export("genericmturkr")
+
+export("accountbalance")
 export("AccountBalance")
-export("AnswerKeyTemplate")
-export("AnswerKeyToDataFrame")
-export("APIReference")
-export("approve")
-export("approveall")
-export("ApproveAllAssignments")
-export("ApproveAssignment")
-export("ApproveAssignments")
+export("getbalance")
+export("SufficientFunds")
+
 export("assignment")
 export("assignments")
+
+export("approve")
+export("approveall")
+export("ApproveAssignment")
+export("ApproveAssignments")
+export("ApproveAllAssignments")
+
+export("reject")
+export("RejectAssignment")
+export("RejectAssignments")
+
 export("assignqual")
 export("AssignQualification")
 export("AssignQualifications")
-#export("authenticate")
+
 export("block")
-export("blockedworkers")
 export("BlockWorker")
 export("BlockWorkers")
+
+export("unblock")
+export("UnblockWorker")
+export("UnblockWorkers")
+
+export("GetBlockedWorkers")
+export("blockedworkers")
+
 export("bonus")
+export("paybonus")
+export("GrantBonus")
+
 export("bonuses")
+export("GetBonuses")
+
 export("changehittype")
 export("ChangeHITType")
+
 export("contact")
 export("ContactWorker")
 export("ContactWorkers")
+
 export("create")
 export("createhit")
 export("CreateHIT")
+
 export("createqual")
 export("CreateQualificationType")
-export("credentials")
+
 export("disable")
 export("DisableHIT")
+
 export("disposehit")
 export("DisposeHIT")
+
 export("disposequal")
 export("DisposeQualificationType")
+
 export("expire")
 export("ExpireHIT")
+
 export("extend")
 export("ExtendHIT")
-export("ExternalQuestionToDataFrame")
+
+export("GetAssignment")
+export("GetAssignments")
+
+export("geturls")
+export("GetFileUpload")
+
+export("hit")
+export("gethit")
+export("GetHIT")
+
+export("gethitsbyqual")
+export("GetHITsForQualificationType")
+export("GetQualificationRequests")
+
+export("getquals")
+export("GetQualifications")
+export("GetQualificationScore")
+export("GetQualificationType")
+
+export("GetReviewResultsForHIT")
+export("reviewresults")
+
+export("grantqual")
+export("GrantQualification")
+export("GrantQualifications")
+
+export("rejectrequest")
+export("RejectQualification")
+export("RejectQualifications")
+
+export("revokequal")
+export("RevokeQualification")
+export("RevokeQualifications")
+
+export("status")
+export("HITStatus")
+
+export("ListOperations")
+export("ListQualificationTypes")
+export("ListStatistics")
+
+export("OpenDownloadPage")
+export("OpenManageHITPage")
+export("OpenQualificationPage")
+export("OpenWorkerPage")
+export("ViewAvailableHITs")
+
+export("mturkr.wizard")
+export("MTurkR.Wizard")
+export("wizard.simple")
+
+export("qualrequests")
+export("qualscore")
+export("qualtype")
+
+export("readlogfile")
+
+export("reviewable")
+export("GetReviewableHITs")
+
+export("hittype")
+export("RegisterHITType")
+
+export("searchhits")
+export("SearchHITs")
+
+export("searchquals")
+export("SearchQualificationTypes")
+
+export("reviewing")
+export("SetHITAsReviewing")
+
+export("notificationtest")
+export("SendTestEventNotification")
+export("setnotification")
+export("SetHITTypeNotification")
+
+export("updatequal")
+export("UpdateQualificationScore")
+export("UpdateQualificationType")
+export("updatequalscore")
+
+export("seconds")
+
+export("GetStatistic")
+export("statistic")
+export("RequesterReport")
+
+export("workerstatistic")
+export("GetWorkerStatistic")
+export("WorkerReport")
+
+export("makeGETparameters")
+export("AnswerKeyTemplate")
+
 export("GenerateAnswerKey")
 export("GenerateExternalQuestion")
 export("GenerateHITLayoutParameter")
@@ -51,99 +183,20 @@ export("GenerateHTMLQuestion")
 export("GenerateNotification")
 export("GenerateQualificationRequirement")
 export("GenerateReviewPolicy")
-export("genericmturkr")
-export("GetAssignment")
-export("GetAssignments")
-export("getbalance")
-export("GetBlockedWorkers")
-export("GetBonuses")
-export("GetFileUpload")
-export("gethit")
-export("GetHIT")
-export("gethitsbyqual")
-export("GetHITsForQualificationType")
-export("GetQualificationRequests")
-export("GetQualifications")
-export("GetQualificationScore")
-export("GetQualificationType")
-export("getquals")
-export("GetReviewableHITs")
-export("GetReviewResultsForHIT")
-export("GetStatistic")
-export("geturls")
-export("GetWorkerStatistic")
-export("GrantBonus")
-export("grantqual")
-export("GrantQualification")
-export("GrantQualifications")
-export("hit")
-export("hitsfromtemplate")
-export("HITStatus")
-export("hittype")
-export("ListOperations")
-export("ListQualificationTypes")
-export("ListStatistics")
-export("makeGETparameters")
-export("mturkhelp")
-export("mturkr.wizard")
-export("MTurkR.Wizard")
-export("notificationtest")
-export("OpenDownloadPage")
-export("OpenManageHITPage")
-export("OpenQualificationPage")
-export("OpenWorkerPage")
-#export("ParseErrorCodes")
-export("paybonus")
-export("qualrequests")
-export("qualscore")
-export("qualtype")
-export("readlogfile")
-export("RegisterHITType")
-export("reject")
-export("RejectAssignment")
-export("RejectAssignments")
-export("RejectQualification")
-export("RejectQualifications")
-export("rejectrequest")
-export("request")
-export("RequesterReport")
-export("reviewable")
-export("reviewing")
-export("reviewresults")
-export("revokequal")
-export("RevokeQualification")
-export("RevokeQualifications")
-export("searchhits")
-export("SearchHITs")
-export("SearchQualificationTypes")
-export("searchquals")
-export("seconds")
-export("SendTestEventNotification")
-export("SetHITAsReviewing")
-export("SetHITTypeNotification")
-export("setnotification")
-export("statistic")
-export("status")
-export("SufficientFunds")
-export("unblock")
-export("UnblockWorker")
-export("UnblockWorkers")
-export("updatequal")
-export("UpdateQualificationScore")
-export("UpdateQualificationType")
-export("updatequalscore")
-export("ViewAvailableHITs")
-export("wizard.simple")
-export("WorkerReport")
-export("workerstatistic")
 
+export("hitsfromtemplate")
+
+
+# imports
 importFrom(digest, hmac)
 importFrom(RCurl, base64Encode, curlEscape, curlUnescape,
                   curlPerform, basicTextGatherer, getURL)
 importFrom(XML, xmlParse, xmlChildren, xpathApply, xmlValue, xmlName,
 				xmlNamespace, xmlSchemaValidate, removeXMLNamespaces,
 				newXMLNode, addChildren, toString.XMLNode, getNodeSet)
-#S3method(print, MTurkResponse)
+
+# S3 methods
+S3method(print, MTurkResponse)
 #S3method(as.data.frame, MTurkAssignment)
 #S3method(as.data.frame, MTurkHIT)
 #S3method(as.data.frame, MTurkAnswerKey)
@@ -159,8 +212,11 @@ importFrom(XML, xmlParse, xmlChildren, xpathApply, xmlValue, xmlName,
 #S3method(as.data.frame, MTurkReviewResults)
 #S3method(as.data.frame, MTurkWorkerBlock)
 
+# `*ToDataFrame` functions to deprecate
+export("AnswerKeyToDataFrame")
 export("AssignmentsToDataFrame")
 export("BonusPaymentsToDataFrame")
+export("ExternalQuestionToDataFrame")
 export("HITsToDataFrame")
 export("HTMLQuestionToDataFrame")
 export("QualificationRequestsToDataFrame")
