@@ -2,9 +2,9 @@
 \alias{request}
 \alias{print.MTurkResponse}
 \title{Execute an MTurk API Request}
-\description{This is the workhorse function that makes authenticated HTTP requests to the MTurk API. It is only exported for advanced users.}
+\description{This is the workhorse function that makes authenticated HTTP requests to the MTurk API. It is only not exported as of v0.5.}
 \usage{
-request(keyid = getOption('MTurkR.keypair')[1], operation, signature = NULL, timestamp=NULL, GETparameters, 
+request(keyid = getOption('MTurkR.keypair')[1], operation, GETparameters, 
         secret = getOption('MTurkR.keypair')[2],
         version = "2012-03-25", service = "AWSMechanicalTurkRequester", 
         browser = getOption('MTurkR.browser'),
@@ -16,10 +16,8 @@ request(keyid = getOption('MTurkR.keypair')[1], operation, signature = NULL, tim
 \arguments{
   \item{keyid}{An AWS Access Key ID. Default is from \code{options('MTurkR.keypair')}.}
   \item{operation}{The MTurk API operation to be performed.}
-  \item{signature}{A base64 encoded HMAC signature, as returned by \code{\link{authenticate}}. Default is \code{NULL}. Must specify \code{secret} xor \code{signature} and \code{timestamp}.}
-  \item{timestamp}{A timestamp, as returned by \code{\link{authenticate}}. Default is \code{NULL}. Must specify \code{secret} xor \code{signature} and \code{timestamp}.}
   \item{GETparameters}{An optional character string containing URL query parameters that specify options for the request.}
-  \item{secret}{An AWS Secret Access Key. Default is from \code{options('MTurkR.keypair')}. Must specify \code{secret} xor \code{signature} and \code{timestamp}.}
+  \item{secret}{An AWS Secret Access Key. Default is from \code{options('MTurkR.keypair')}.}
   \item{version}{The version of the MTurk API to use. Default is \dQuote{2012-03-25}, under which the MTurkR package was built.}
   \item{service}{The MTurk service to which the authenticated request will be sent. Supplied only for advanced users.}
   \item{browser}{Optionally open the request in the default web browser, rather than opening in R. Default is \code{FALSE}.}
@@ -29,7 +27,7 @@ request(keyid = getOption('MTurkR.keypair')[1], operation, signature = NULL, tim
   \item{print.errors}{Whether errors produced by the MTurk API request should be printed.}
   \item{validation.test}{Currently a logical that causes \code{request} to return the URL of the specified REST request. Default is \code{FALSE}. May additionally validate the request (and supply information about that validation) in the future.}
 }
-\details{This is a mostly internal function that executes MTurk API requests. It is made available for use by advanced users to execute custom API requests (in tandem with \code{\link{authenticate}}). Even advanced users, however, should be satisfied with the functionality provided by \code{\link{genericmturkr}}.}
+\details{This is an internal function that executes MTurk API requests. It is made available for use by advanced users to execute custom API requests. Even advanced users, however, should be satisfied with the functionality provided by \code{\link{genericmturkr}}.}
 \value{A list of class \dQuote{MTurkResponse} containing:
   \item{request.url}{The URL of the MTurk API REST request.}
   \item{request.id}{The Request ID created by the API request.}
@@ -43,7 +41,5 @@ request(keyid = getOption('MTurkR.keypair')[1], operation, signature = NULL, tim
 \author{Thomas J. Leeper}
 %\note{}
 \seealso{
-\code{\link{authenticate}}
-
 \code{\link{ParseErrorCodes}}
 }
