@@ -1,14 +1,15 @@
 # CHANGES TO MTurkR 0.5 #
 
 ## SIGNIFICANT USER-VISIBLE CHANGES ##
+* `APIReference` and `mturkhelp` are deprecated.
 * `GetBonuses` no longer supports the `return.bonus.dataframe` logical. All bonuses are automatically returned. To just retrieve details on number of bonuses per HIT, request only the first page with `page.number=1` and `print=TRUE`.
 * The `credentials` function has now been changed to create and/or retrieve a global option `MTurkR.keypair`. This is a backwards compatible change that allows users to specify `options(MTurkR.keypair=c(accesskey, secretkey))` directly without using `credentials`. All functions now point directly to the global option, so that `credentials` can be deprecated in a future release.
 * In many functions that return a dataframe with a `Valid` column (e.g., `ContactWorkers`, etc.), `Valid` is now a factor. (#28)
 * Using `ContactWorkers` in batch mode now returns a dataframe identical in structure to using it in regular mode, with one row per worker. (#32)
 * The `signature` argument to `request` now defaults to `NULL` and is generated automatically.
 * `HITsToDataFrame` now returns, for the QualificationRequirements list element, an empty dataframe rather a single NA missing value if a given HIT does not have any QualificationRequirements attached to it.
-* `request` now generates the API authentication signature automatically, eliminating the need for `authenticate`.
-* `request` now uses `curlPerform` instead `getURL` to gain finer control over API requests.
+* `request` now generates the API authentication signature automatically, eliminating the need for `authenticate`, which is deprecated. `request` no longer accepts `signature` or `timestamp` arguments.
+* `request` now uses `curlPerform` instead of `getURL` to gain finer control over API requests.
 * `request` now attempts to `tryCatch` any errors on writing the MTurkR log file. (#9)
 * `request` now returns an object of S3 class "MTurkResponse" and an associated print method has been added.
 
@@ -18,6 +19,9 @@
 * Fixed a bug in `GetBonuses` using a HITTypeId that caused the function to fail catastrophically.
 
 ## DOCUMENTATION ##
+* Documentation for `mturkhelp` and `APIReference` now reflect deprecated status.
+* Documentation file for `authenticate` now reflect its deprecated status. `request` notes that it no longer accepts `signature` or `timestamp` arguments, which are now generated internally.
+* Documentation files for `request` and `ParseErrorCodes` have been updated to reflect their now non-exported status.
 * Work on the MTurkR wiki (https://github.com/leeper/MTurkR/wiki) has begun, with contributions from Kyle Hamilton.
 * The `add.seconds` parameter was incorrectly called `add.time` in the `ExtendHIT` documentation.
 
